--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,6 +12,8 @@
         style="@style/Widget.MaterialComponents.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:menu="@menu/menu_toolbar"
+        app:navigationIcon="@android:drawable/arrow_up_float"
         app:title="@string/app_name"/>
 
     <androidx.recyclerview.widget.RecyclerView
