--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,9 +9,19 @@
         android:id="@+id/fragmentFirst"
         android:name="com.example.lesson10networkandscrolledlist.FragmentFirst"
         android:label="fragment_first"
-        tools:layout="@layout/fragment_first" />
+        tools:layout="@layout/fragment_first" >
+        <action
+            android:id="@+id/action_fragmentFirst_to_fragmentSecond"
+            app:destination="@id/fragmentSecond" />
+    </fragment>
     <fragment
         android:id="@+id/fragmentSecond"
         android:name="com.example.lesson10networkandscrolledlist.FragmentSecond"
-        android:label="FragmentSecond" />
+        android:label="FragmentSecond"
+        tools:layout="@layout/fragment_second">
+
+        <argument
+            android:name="login"
+            app:argType="string"/>
+    </fragment>
 </navigation>
